RESOLVED FIXED167969
[WebRTC] usrsctp (libwebrtc third party library) is not compiling on latest mac platform
https://bugs.webkit.org/show_bug.cgi?id=167969
Summary [WebRTC] usrsctp (libwebrtc third party library) is not compiling on latest m...
youenn fablet
Reported 2017-02-07 16:56:32 PST
[WebRTC] usrsctp (libwebrtc third party library) is not compiling on latest mac platform
Attachments
Patch (20.45 KB, patch)
2017-02-07 17:04 PST, youenn fablet
no flags
youenn fablet
Comment 1 2017-02-07 17:04:46 PST
Alex Christensen
Comment 2 2017-02-07 17:09:12 PST
Note You need to log in before you can comment on or make changes to this bug.